src/objects/ffr__DataViewJoin__c.object
<CustomObject>
    <description>Stores details of a relationship join between a secondary object and the primary object in a dataview.</description>
    <fields>
        <fullName>ffr__Dataview__c</fullName>
        <label>Dataview</label>
        <referenceTo>ffr__DataView__c</referenceTo>
        <relationshipLabel>DataView Joins</relationshipLabel>
        <relationshipName>DataViewJoins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__Depth__c</fullName>
        <label>Depth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Expanded__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Expanded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__Index__c</fullName>
        <label>Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__ParentName__c</fullName>
        <label>Parent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__RelationshipName__c</fullName>
        <label>Relationship Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Aggregate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DataView Join</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataView Joins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>